assets/style.css
 /* || General styles */
 
 /*Colour pallet ourced from https://colorhunt.co/palette/a2d2fffef9efff865efee440 */

:root {
  --blue: #A2D2FF;
  --white: #FEF9EF;
  --peach: #FF865E;
  --yellow: #FEE440;
  --navy: #4d5c85;
}

* {
    font-family: Helvetica, Arial,  sans-serif;
}


/*Naming the areas using the grid-area property.*/
header {
    grid-area: header;
  }
#main-nav {
  grid-area: nav;
}
#about {
  grid-area: about;
}
#work {
  grid-area: work;
}
#contact {
  grid-area: contact;
}

/*Setting up the layout for the mobile grid.*/
body {
  display: grid;
  gap: 20px;
  grid-template-areas:
  "header"
  "nav"
  "about"
  "work"
  "contact";

  /*Setting the basic styling for the body.*/
  font-size: 1.5em;
  line-height: 1.5;
  background-color: var(--white);
  color: black;
}


/* || Header and Main Navigation */


header {
  width: 100%;
  margin: 20px auto;
  padding: 40px;
  /*Creating the flex container for the figure to make it reactive to display size.*/
  display: flex;
  flex-direction: column;
}

header div {
  width: 100%;
  height: 100%;
}

/*Tying the size of the figure with the size of the display.*/
header figure {
  width: 100%;
  bottom: 0;
}

/*Creating the yellow circle with oversized image of name.*/
#name-bubble {
  width: 160px;
  height: 160px;
  background-color: var(--yellow);
  border-radius: 50%;
}

#main-head {
  width: 300%;
  margin-top: 42%;
}

/*Turned main-nav container into grid.*/
#main-nav {
  width: 100%;
  margin: 20px auto;
  padding: 40px;
  background: repeating-linear-gradient(var(--white), var(--white) 49.9%, var(--peach) 50.1%, var(--peach) 100%);
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 0.5fr 1fr 1fr 1fr;
}

/*Tying width size of children to the parent.*/
nav div {
  width: 100%;
}

#nav-header {
  width: 80%;
  grid-column: 1 / span 2;
  grid-row: 1;
}

/*Styled the font for the nav header.*/
#main-nav h2 {
  font-style: italic;
  font-size: 1.2em;
}

#my-photo {
  grid-column: 2;
  grid-row: 2;
  margin-top: -20%;
  margin-left: -20%;
  z-index: 4;
}

#my-photo figure {
  width: 100%;
}

#my-photo img {
  width: 200px;
  height:auto;
  border-radius: 50%;
}

#about-bubble {
  width: 230px;
  height: 230px;
  border-radius: 50%;
  background-color: var(--peach);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  grid-column: 1;
  grid-row: 2;
  margin-left: 20%;
  z-index: 1;
}

#about-bubble img {
  width: 120px;
  height:auto;
}

#resume-bubble {
  width: 180px;
  height: 180px;
  border-radius: 50%;
  background-color: var(--blue);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  grid-column: 2;
  grid-row: 3;
  margin-top: -50%;
  margin-left: -60%;
  z-index: 2;
}

#resume-bubble img {
  width: 120px;
  height:auto;
}

#works-bubble {
  width: 300px;
  height: 300px;
  border-radius: 50%;
  background-color: var(--navy);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  grid-column: 1;
  grid-row: 3;
  margin-top: -10%;
  margin-left: -17%;
  z-index: 3;
}

#works-bubble img {
  width: 190px;
  height:auto;
}

#contact-bubble {
  width: 250px;
  height: 250px;
  border-radius: 50%;
  background-color: var(--yellow);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  grid-column: 2;
  grid-row: 4;
  margin-top: -45%;
  margin-left: -5%;
  z-index: 5;
}

#contact-bubble img {
  width: 160px;
  height:auto;
}


/* || About Section */


#about {
  width: 100%;
  height: auto;
  margin: 0 auto;
  padding: 60px;
  background-color: var(--peach);

}

#about figure img {
  width: 60%;
}

#about h2 {
  font-size: 1.5em;
}

/* || My Work Section */

/*Creates a grid in the section to position bubbles with links to applications or placeholder images.*/
#work {
  width: 100%;
  margin: 20px auto;
  padding: 40px;
  background-color: var(--navy);
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr 1fr 1fr;
}

#work figure img {
  width: 100%;
  grid-column: 2;
  grid-row: 1;
}

.work-bubble {
  border-radius: 50%;
  background-color: var(--white);
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
}
/* Img opacity used together with the :hover selector to change the opacity on mouse-over:*/
.work-bubble img {
  width: 100%;
  border-radius: 50%;
  opacity: 0.6;
}

.work-bubble a {
  position: absolute;
  font-size: 1.5em;
  font-weight: bold;
  z-index: 6;
}

#work1 {
  width: 250px;
  height: 250px;
  grid-column: 2;
  grid-row: 2;
  margin-top: -10%;
  margin-left: -10%;
  z-index: 5;
}

#work2 {
  width: 200px;
  height: 200px;
  grid-column: 2;
  grid-row: 1;
  margin-top: 18%;
  margin-left: -7%;
  z-index: 4;
}

#work3 {
  width: 190px;
  height: 190px;
  grid-column: 1;
  grid-row: 2;
  margin-top: -5%;
  margin-left: 25%;
  z-index: 3;
}

#work4 {
  width: 240px;
  height: 240px;
  grid-column: 1;
  grid-row: 3;
  margin-top: 0%;
  margin-left: 0%;
  z-index: 2;
}

#work5 {
  width: 200px;
  height: 200px;
  grid-column: 2;
  grid-row: 3;
  margin-top: -15%;
  margin-left: -18%;
  z-index: 1;
}

.work-bubble img:hover {
  opacity: 1.0;
  z-index: 5;
}

.work-bubble a:hover {
  font-size: 2em;
}

/* || Contact Section */

/*Adding the background colour and basic stying to contact section.*/
#contact {
  width: 100%;
  margin: 40px auto;
  padding: 20px;
  padding-right: 40px;
  background-color: var(--yellow);

  /*Setting the section as a flex container.*/
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
}

#contact img {
  width: 40%;
}

#contact ul {
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

#contact li {
  font-weight: bold;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
 
  background-color: var(--blue);
  border-radius: 50%;
}

#email {
  height: 100px;
  width: 100px;
  margin-top: -30%;
}

#linkedin {
  height: 120px;
  width: 120px;
  margin-bottom: -15%;
}

#github {
  height: 110px;
  width: 110px;
  margin-left: -5%;
}

#contact a {
  color: black;
}


/* || Media Queries */

/*Setting the layout for the nav and work tablet grids*/
@media screen and (min-width: 480px) {
  #main-nav {
     /*Changed value.*/
    margin: 0 auto;
  }
  
  /*Tying width size of children to the parent.*/
  nav div {
    width: 100%;
  }
  
  #main-nav h2 {
    font-size: 1.6em;
  }

  #my-photo {
    /*Changed value.*/
    margin-top: 0%;
    margin-left: 0%;
  }
  
  #my-photo img {
     /*Changed value.*/
    width: 300px;
  }

  #about-bubble {
    /*Changed value.*/
    margin-top: 20%;
    margin-left: 40%;
  }
  
  #resume-bubble {
     /*Changed value.*/
    width: 200px;
    height: 200px;
    /*Changed value.*/
    margin-top: -15%;
    /*Changed value.*/
    margin-left: -20%;
  }
  
  #works-bubble {
    /*Changed value.*/
    margin-top: 10%;
    /*Changed value.*/
    margin-left: 0%;
  }
  
  #contact-bubble {

    /*Changed value.*/
    margin-top: -15%;
    margin-left: -5%;
  }


  #work {
    width: 100%;
     /*Changed value.*/
    margin: 0 auto;
    margin-top: 100px;
    padding: 20px;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
  }
  
  .work-bubble a {
     /*Changed value.*/
    font-size: 2em;
  }
  
  #work1 {
     /*Changed value.*/
    width: 400px;
    height: 400px;
    /*Changed value.*/
    margin-top: 0%;
    margin-left: 15%;
  }
  
  #work2 {
     /*Changed value.*/
    width: 270px;
    height: 270px;
     /*Changed value.*/
    margin-top: 58%;
    margin-left: -7%;
  }
  
  #work3 {
     /*Changed value.*/
    width: 250px;
    height: 250px;
     /*Changed value.*/
    margin-top: 5%;
    margin-left: 40%;
  }
  
  #work4 {
     /*Changed value.*/
    width: 300px;
    height: 300px;
  /*Changed value.*/
    margin-top: 31%;
    margin-left: -20%;
  }
  
  #work5 {
     /*Changed value.*/
    width: 370px;
    height: 370px;
     /*Changed value.*/
    margin-top: -10%;
    margin-left: 38%;
  }
  
  
  .work-bubble a:hover {
     /*Changed value.*/
    font-size: 2.5em;
  }
  
}




/*Setting the layout for the desktop grid*/
@media screen and (min-width: 1100px) {
  body {
      grid-template-columns: 1fr 1fr 1fr;
      grid-template-areas: 
          "header header nav"
          "about about nav"
          "work work work"
          "contact contact contact";
  }

  header {
    width: 100%;
    margin: 20px auto;
    padding: 40px;
    /*Creating the flex container for the figure to make it reactive to display size.*/
    display: flex;
    flex-direction: block;
  }
  
  /*Tying the size of the figure with the size of the display.*/
  header figure {
    width: 100%;
    height: 100%;
    bottom: 0;
  }

  /*Creating the yellow circle with oversized image of name.*/
  #name-bubble {
    width: 160px;
    height: 160px;
    background-color: var(--yellow);
    border-radius: 50%;
  }

  #main-head {
    width: 300%;
    margin-top: 42%;
  }

  #main-nav {
    /*Changed value.*/
   margin: 0 auto;
 }
 
  /*Tying width size of children to the parent.*/
  nav div {
    width: 100%;
  }
  
  #main-nav h2 {
    font-size: 1.6em;
  }

  #my-photo {
    /*Changed value.*/
    margin-top: 0%;
    margin-left: 0%;
  }
  
  #my-photo img {
      /*Changed value.*/
    width: 300px;
  }

  #about-bubble {
    /*Changed value.*/
    margin-top: 20%;
    margin-left: 40%;
  }
  
  #resume-bubble {
      /*Changed value.*/
    width: 200px;
    height: 200px;
    /*Changed value.*/
    margin-top: -15%;
    /*Changed value.*/
    margin-left: -20%;
  }
  
  #works-bubble {
    /*Changed value.*/
    margin-top: 10%;
    /*Changed value.*/
    margin-left: 0%;
  }
  
  #contact-bubble {

    /*Changed value.*/
    margin-top: -15%;
    margin-left: -5%;
  }



  /* || About Section */


#about {
  width: 100%;
  height: auto;
  margin: 0 auto;
  padding: 60px;
  background-color: var(--peach);
  

}

#about h2 {
  font-size: 1.5em;
}


  #work {
    width: 100%;
      /*Changed value.*/
    margin: 0 auto;
    margin-top: 100px;
    padding: 20px;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
  }
  
  .work-bubble a {
      /*Changed value.*/
    font-size: 2em;
  }
  
  #work1 {
      /*Changed value.*/
    width: 400px;
    height: 400px;
    /*Changed value.*/
    margin-top: 0%;
    margin-left: 15%;
  }
  
  #work2 {
      /*Changed value.*/
    width: 270px;
    height: 270px;
      /*Changed value.*/
    margin-top: 58%;
    margin-left: -7%;
  }
  
  #work3 {
      /*Changed value.*/
    width: 250px;
    height: 250px;
      /*Changed value.*/
    margin-top: 5%;
    margin-left: 40%;
  }
  
  #work4 {
      /*Changed value.*/
    width: 300px;
    height: 300px;
  /*Changed value.*/
    margin-top: 31%;
    margin-left: -20%;
  }
  
  #work5 {
      /*Changed value.*/
    width: 370px;
    height: 370px;
      /*Changed value.*/
    margin-top: -10%;
    margin-left: 38%;
  }
  
  
  .work-bubble a:hover {
      /*Changed value.*/
    font-size: 2.5em;
  }
 
}

  

